{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 15,
  "lineage": "c130022f-d34f-ac48-d06a-6c752a713211",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc_a_to_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.20.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-054259f2a41228cfd662290444",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-054259f2a41228cfd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0a7ca9ca9ce02e1c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.vpc_a_rt",
            "aws_vpc.VPC_A",
            "aws_vpc.VPC_B",
            "aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc_b_to_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.10.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c1820a13d535f4a7519371977",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c1820a13d535f4a7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0a7ca9ca9ce02e1c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.vpc_b_rt",
            "aws_vpc.VPC_A",
            "aws_vpc.VPC_B",
            "aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_a_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:030998639810:route-table/rtb-054259f2a41228cfd",
            "id": "rtb-054259f2a41228cfd",
            "owner_id": "030998639810",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "VPC-A"
            },
            "tags_all": {
              "Name": "VPC-A"
            },
            "timeouts": null,
            "vpc_id": "vpc-0371088db67717f1a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.VPC_A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_b_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:030998639810:route-table/rtb-0c1820a13d535f4a7",
            "id": "rtb-0c1820a13d535f4a7",
            "owner_id": "030998639810",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "VPC-B"
            },
            "tags_all": {
              "Name": "VPC-B"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da401577c613534d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.VPC_B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_a_public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01fa6924d74e88759",
            "route_table_id": "rtb-054259f2a41228cfd",
            "subnet_id": "subnet-0920ee0b612f9126b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.vpc_a_rt",
            "aws_subnet.vpc_a_public_subnet",
            "aws_vpc.VPC_A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_b_public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0118a0c7cc6c4f63d",
            "route_table_id": "rtb-0c1820a13d535f4a7",
            "subnet_id": "subnet-0a58476be4ece4390"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.vpc_b_rt",
            "aws_subnet.vpc_b_public_subnet",
            "aws_vpc.VPC_B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_a_priavte_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:030998639810:subnet/subnet-07f94d8c896b725cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f94d8c896b725cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "030998639810",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC-A-Private"
            },
            "tags_all": {
              "Name": "VPC-A-Private"
            },
            "vpc_id": "vpc-0371088db67717f1a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.VPC_A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_a_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:030998639810:subnet/subnet-0920ee0b612f9126b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0920ee0b612f9126b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "030998639810",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC-A-Public"
            },
            "tags_all": {
              "Name": "VPC-A-Public"
            },
            "vpc_id": "vpc-0371088db67717f1a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.VPC_A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_b_priavte_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:030998639810:subnet/subnet-07f581a0a0a80c9de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f581a0a0a80c9de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "030998639810",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC-B-Private"
            },
            "tags_all": {
              "Name": "VPC-B-Private"
            },
            "vpc_id": "vpc-0da401577c613534d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.VPC_B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc_b_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:030998639810:subnet/subnet-0a58476be4ece4390",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a58476be4ece4390",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "030998639810",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC-B-Public"
            },
            "tags_all": {
              "Name": "VPC-B-Public"
            },
            "vpc_id": "vpc-0da401577c613534d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.VPC_B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:030998639810:vpc/vpc-0371088db67717f1a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0a672517a1d3014ff",
            "default_route_table_id": "rtb-02e34d932749d1cba",
            "default_security_group_id": "sg-03f6c843edc389445",
            "dhcp_options_id": "dopt-01872337d2a792696",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0371088db67717f1a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02e34d932749d1cba",
            "owner_id": "030998639810",
            "tags": {
              "Name": "VPC-A"
            },
            "tags_all": {
              "Name": "VPC-A"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC_B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:030998639810:vpc/vpc-0da401577c613534d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0917195a65e602c8d",
            "default_route_table_id": "rtb-07e4fb22e4a87b901",
            "default_security_group_id": "sg-04c16fca93901febc",
            "dhcp_options_id": "dopt-01872337d2a792696",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0da401577c613534d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07e4fb22e4a87b901",
            "owner_id": "030998639810",
            "tags": {
              "Name": "VPC-B"
            },
            "tags_all": {
              "Name": "VPC-B"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "pending-acceptance",
            "id": "pcx-0a7ca9ca9ce02e1c8",
            "peer_owner_id": "030998639810",
            "peer_region": "eu-west-2",
            "peer_vpc_id": "vpc-0da401577c613534d",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "VPC-A-to-VPC-B-Peering"
            },
            "tags_all": {
              "Name": "VPC-A-to-VPC-B-Peering"
            },
            "vpc_id": "vpc-0371088db67717f1a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.VPC_A",
            "aws_vpc.VPC_B"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0a7ca9ca9ce02e1c8",
            "peer_owner_id": "030998639810",
            "peer_region": "eu-west-2",
            "peer_vpc_id": "vpc-0da401577c613534d",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "VPC-A-to-VPC-B-Peering"
            },
            "tags_all": {
              "Name": "VPC-A-to-VPC-B-Peering"
            },
            "vpc_id": "vpc-0371088db67717f1a",
            "vpc_peering_connection_id": "pcx-0a7ca9ca9ce02e1c8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.VPC_A",
            "aws_vpc.VPC_B",
            "aws_vpc_peering_connection.peer"
          ]
        }
      ]
    }
  ]
}